# preFlight

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  build_deps.sh  build_linux.sh  build_ninja.bat  build_win.bat  pack_appimage.sh  run_build.bat  version.inc
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement-request.md
build-utils/: CMakeLists.txt
bundled_deps/: CMakeLists.txt
bundled_deps/admesh/admesh/: shared.cpp  stl.h
bundled_deps/hints/: CMakeLists.txt  HintsToPot.cpp
bundled_deps/libbgcode/: CMakeLists.txt
bundled_deps/libbgcode/LibBGCode/binarize/: binarize.cpp  export.h
bundled_deps/libbgcode/LibBGCode/convert/: convert.cpp  export.h
bundled_deps/libbgcode/LibBGCode/core/: export.h
bundled_deps/libigl/igl/: cat.cpp  diag.cpp  slice_into.cpp
cmake/modules/: AddCMakeProject.cmake  FindOpenVDB.cmake  FindwxWidgets.cmake
resources/data/: hints.ini
resources/localization/: preFlight.pot
resources/localization/be/: preFlight.mo  preFlight_be.po
resources/localization/ca/: preFlight.mo  preFlight_ca.po
resources/localization/cs/: preFlight.mo  preFlight_cs.po
resources/localization/de/: preFlight.mo  preFlight_de.po
resources/localization/en/: preFlight.mo  preFlight_en.po
resources/localization/es/: preFlight.mo  preFlight_es.po
resources/localization/fi/: preFlight.mo  preFlight_fi.po
resources/localization/fr/: preFlight.mo  preFlight_fr.po
resources/localization/hu/: preFlight.mo  preFlight_hu.po
resources/localization/it/: preFlight.mo  preFlight_it.po
resources/localization/ja/: preFlight.mo  preFlight_ja.po
resources/localization/ko/: preFlight.mo  preFlight_ko_KR.po
resources/localization/ko_KR/: preFlight.mo  preFlight_ko.po  preFlight_ko_KR.po
resources/localization/nl/: preFlight.mo  preFlight_nl.po
resources/localization/pl/: preFlight.mo  preFlight_pl.po
resources/localization/pt_BR/: preFlight.mo  preFlight_pt_BR.po
resources/localization/ru/: preFlight.mo  preFlight_ru.po
resources/localization/sl/: preFlight.mo  preFlight.po
resources/localization/tr/: preFlight.mo  preFlight_tr.po
resources/localization/uk/: preFlight.mo  preFlight_uk.po
resources/localization/wx_locale/: be.po
resources/localization/zh_CN/: preFlight.mo  preFlight_zh_CN.po
resources/localization/zh_TW/: preFlight.mo  preFlight_zh_TW.po
resources/profiles/: ArchiveRepositoryManifest.json
src/: CMakeLists.txt  preFlight.cpp  preFlight.hpp  preFlight_app_msvc.cpp
src/CLI/: CLI.hpp  CLI_DynamicPrintConfig.hpp  GuiParams.cpp  LoadPrintData.cpp  PrintHelp.cpp  ProcessActions.cpp  ProcessTransform.cpp  ProfilesSharingUtils.cpp  ProfilesSharingUtils.hpp  Run.cpp  Setup.cpp
src/clipper2/: CMakeLists.txt
src/libseqarrange/: CMakeLists.txt
src/libseqarrange/include/libseqarrange/: seq_interface.hpp
src/libseqarrange/src/: seq_defs.hpp  seq_interface.cpp  seq_preprocess.cpp  seq_preprocess.hpp  seq_sequential.cpp  seq_sequential.hpp  seq_utilities.cpp  seq_utilities.hpp  sequential_decimator.cpp  sequential_decimator.hpp
src/libslic3r/: AABBMesh.cpp  AABBMesh.hpp  AABBTreeIndirect.hpp  AABBTreeLines.hpp  AStar.hpp  AnyPtr.hpp  AppConfig.cpp  AppConfig.hpp  ArrangeHelper.cpp  ArrangeHelper.hpp  BlacklistedLibraryCheck.cpp  BlacklistedLibraryCheck.hpp  BoostAdapter.hpp  BoundingBox.cpp  BoundingBox.hpp  BridgeDetector.cpp  BridgeDetector.hpp  Brim.cpp  Brim.hpp  BrimEarsPoint.hpp  BuildVolume.cpp  BuildVolume.hpp  CMakeLists.txt  Channel.hpp  Clipper.hpp  ClipperUtils.cpp  ClipperUtils.hpp  ClipperZUtils.hpp  Color.cpp  Color.hpp  Config.cpp  Config.hpp  CustomGCode.cpp  CustomGCode.hpp  CustomParametersHandling.cpp  CustomParametersHandling.hpp  CutSurface.cpp  CutSurface.hpp  CutUtils.cpp  CutUtils.hpp  (+192 more)
src/libvgcode/: CMakeLists.txt
src/occt_wrapper/: CMakeLists.txt  OCCTWrapper.cpp  OCCTWrapper.hpp
src/slic3r/: CMakeLists.txt  pchheader.hpp
(+740 files in other folders)
